--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,27 +1,23 @@
-{% set name = "SAS_kernel" %}
 {% set version = "2.2.0" %}
-{% set hash_type = "sha256" %}
-{% set hash_val = "3ebddf4a85311b718acf12f56cc342f808039e83771cf0ae2b1f2f163c98c6b8" %}
 
 package:
-  name: {{ name | lower }}
+  name: sas_kernel
   version: {{ version }}
 
 source:
-  fn: {{ name }}-{{ version }}.tar.gz
-  url: https://pypi.io/packages/source/{{ name[0] | lower }}/{{ name | lower }}/{{ name }}-{{ version }}.tar.gz
-  {{ hash_type }}: {{ hash_val }}
+  url: https://pypi.io/packages/source/s/sas_kernel/SAS_kernel-{{ version }}.tar.gz
+  sha256: 3ebddf4a85311b718acf12f56cc342f808039e83771cf0ae2b1f2f163c98c6b8
 
 build:
-  number: 1000
-  script: NO_KERNEL_INSTALL=1 python setup.py install --single-version-externally-managed --record=record.txt
+  number: 1001
+  script: "NO_KERNEL_INSTALL=1 {{ PYTHON }} -m pip install . --no-deps -vv"
   skip: true  # [not linux]
   skip: true  # [py2k]
 
 requirements:
   build:
     - python 
-    - setuptools
+    - pip
     - ipython >=4
   run:
     - python
@@ -37,7 +33,8 @@ test:
 
 about:
   home: https://github.com/sassoftware/sas_kernel
-  license: Apache 2.0
+  license: Apache-2.0
+  license_file: LICENSE.txt
   summary: A Jupyter kernel for SAS
 
 extra:
