--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,41 +1,48 @@
-{% set version = "2.4.6" %}
+{% set name = "sas_kernel" %}
+{% set version = "2.4.11" %}
 
 package:
-  name: sas_kernel
+  name: {{ name|lower }}
   version: {{ version }}
 
 source:
-  url: https://pypi.io/packages/source/s/sas_kernel/SAS_kernel-{{ version }}.tar.gz
-  sha256: 54fdf913442872a8a2b13b3ae5e104d5bc9171725487904e5a151587ca9b7dd5
+  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/SAS_kernel-{{ version }}.tar.gz
+  sha256: 7bd05f0d071ab975d8cac6ee1eb1ee0d19c47d69121afddc6c0b47bd044983f6
 
 build:
+  noarch: python
+  script: {{ PYTHON }} -m pip install . -vv
   number: 0
-  script: NO_KERNEL_INSTALL=1 {{ PYTHON }} -m pip install . --no-deps -vv
-  skip: true  # [not linux]
-  skip: true  # [py2k]
 
 requirements:
   host:
     - python
+    - metakernel >=0.27.5
+    - jupyter_client >=6
+    - ipython >=7
     - pip
-    - ipython >=4
   run:
     - python
-    - ipython >=4
-    - saspy >=1.2.2
-    - pygments
-    - metakernel >=0.18.0
-    - jupyter_client >=4.4.0
+    - saspy >=3.6
+    - metakernel >=0.27.5
+    - jupyter_client >=6
+    - ipython >=7
 
 test:
   imports:
     - sas_kernel
+  commands:
+    - pip check
+  requires:
+    - pip
 
 about:
   home: https://github.com/sassoftware/sas_kernel
+  summary: A SAS kernel for Jupyter
   license: Apache-2.0
-  license_file: LICENSE.txt
-  summary: A Jupyter kernel for SAS
+  license_file:
+    - LICENSE.txt
 
 extra:
   recipe-maintainers:
+    - izahn
